# geh-settlement-report

./: .editorconfig  .gitignore  .tool-versions  README.md  SettlementReport.sln
.docker/: Dockerfile  (+2 more)
source/geh_settlement_report/: README.md  coverage.xml  pyproject.toml
source/geh_settlement_report/.settlement-report-pytest/: pyvenv.cfg
source/geh_settlement_report/contracts/: settlement-report-balance-fixing-parameters-reference.txt
source/geh_settlement_report/src/geh_settlement_report/: __init__.py
source/geh_settlement_report/src/geh_settlement_report/common/: get_report_id.py
source/geh_settlement_report/src/geh_settlement_report/entry_points/: entry_point.py
source/geh_settlement_report/src/geh_settlement_report/infrastructure/: create_zip_file.py  csv_writer.py  paths.py  report_name_factory.py  repository.py
source/geh_settlement_report/src/geh_settlement_report/measurements_reports/: entry_point.py
source/geh_settlement_report/src/geh_settlement_report/settlement_reports/: entry_point.py
source/geh_settlement_report/tests/: .gitignore  __init__.py  assertion.py  conftest.py  constants.py  dbutils_fixture.py  external_data_products.py  utils.py
source/geh_settlement_report/tests/application/: conftest.py  test_entry_points.py  test_settlement_report_output_path.py
source/geh_settlement_report/tests/application/job_args/: test_settlement_report_args.py
source/geh_settlement_report/tests/application/tasks/: test_execute_charge_link_periods.py  test_execute_charge_price_points.py  test_execute_energy_results.py  test_execute_hourly_time_series_points.py  test_execute_metering_point_periods.py  test_execute_monthly_amounts.py  test_execute_quarterly_time_series_points.py  test_execute_wholesale_results.py  test_start_measurements_report.py
source/geh_settlement_report/tests/application/utils/: test_get_dbutils.py
source/geh_settlement_report/tests/coverage/: all_cases_measurement_reports.yml
source/geh_settlement_report/tests/data_seeding/: standard_balance_fixing_scenario_data_generator.py  standard_wholesale_fixing_scenario_data_generator.py  write_test_data.py
source/geh_settlement_report/tests/domain/charge_link_periods/: test_charge_link_periods_read_and_filter.py
source/geh_settlement_report/tests/domain/charge_price_points/: test_charge_price_points_prepare_for_csv.py  test_charge_price_points_read_and_filter.py
source/geh_settlement_report/tests/domain/energy_results/: test_energy_read_and_filter.py
source/geh_settlement_report/tests/domain/metering_point_periods/: test_metering_point_periods_factory_balance_fixing.py  test_metering_point_periods_factory_wholesale.py  test_metering_point_periods_read_and_filter_balance_fixing.py  test_metering_point_periods_read_and_filter_wholesale.py
source/geh_settlement_report/tests/domain/monthly_amounts/: test_monthly_amounts_prepare_for_csv.py  test_monthly_amounts_read_and_filter.py
source/geh_settlement_report/tests/domain/time_series_points/: test_prepare_for_csv.py  test_read_and_filter.py
source/geh_settlement_report/tests/domain/utils/: test_map_from_dict.py  test_map_to_csv_naming.py  test_merge_periods.py  test_system_operator_filter.py
source/geh_settlement_report/tests/domain/wholesale_results/: test_wholesale_read_and_filter.py
source/geh_settlement_report/tests/entry_points/: conftest.py  test_entry_points.py  test_settlement_report_output_path.py
source/geh_settlement_report/tests/entry_points/job_args/: test_settlement_report_args.py
source/geh_settlement_report/tests/entry_points/tasks/: test_execute_charge_link_periods.py  test_execute_charge_price_points.py  test_execute_energy_results.py  test_execute_hourly_time_series_points.py  test_execute_metering_point_periods.py  test_execute_monthly_amounts.py  test_execute_quarterly_time_series_points.py  test_execute_wholesale_results.py  (+1 more)
source/geh_settlement_report/tests/infrastructure/: test_create_zip_file.py  test_csv_writer.py  test_project_script.py  test_report_name_factory.py
source/geh_settlement_report/tests/integration_test/: test_azure_monitor.py
source/geh_settlement_report/tests/measurements_reports/: conftest.py
source/geh_settlement_report/tests/settlement_reports/: conftest.py
source/geh_settlement_report/tests/test_factories/: amounts_per_charge_factory.py  charge_link_periods_factory.py  charge_price_information_periods_factory.py  charge_price_points_factory.py  default_test_data_spec.py  energy_factory.py  latest_calculations_factory.py  metering_point_periods_factory.py  metering_point_time_series_factory.py  monthly_amounts_per_charge_factory.py  time_series_points_csv_factory.py  total_monthly_amounts_factory.py
(+1353 files in other folders)
