[project]
name = "geh-settlement-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "configargparse==1.5.3",
    "pyspark==3.5.1",
    "delta-spark==3.1.0",
    "python-dateutil==2.8.2",
    "azure-monitor-opentelemetry==1.6.0",
    "azure-core==1.30.0",
    "geh_common @ git+https://git@github.com/Energinet-DataHub/opengeh-python-packages@geh_common_4.0.0",
]

[project.scripts]
create_hourly_time_series     = "settlement_report_job.entry_points.entry_point:start_hourly_time_series_points"
create_quarterly_time_series  = "settlement_report_job.entry_points.entry_point:start_quarterly_time_series_points"
create_metering_point_periods = "settlement_report_job.entry_points.entry_point:start_metering_point_periods"
create_charge_links           = "settlement_report_job.entry_points.entry_point:start_charge_link_periods"
create_charge_price_points    = "settlement_report_job.entry_points.entry_point:start_charge_price_points"
create_energy_results         = "settlement_report_job.entry_points.entry_point:start_energy_results"
create_monthly_amounts        = "settlement_report_job.entry_points.entry_point:start_monthly_amounts"
create_wholesale_results      = "settlement_report_job.entry_points.entry_point:start_wholesale_results"
create_zip                    = "settlement_report_job.entry_points.entry_point:start_zip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
